# MWTLeaderboards

./: README.md
python/: .gitignore  requirements.txt  test.py
python/modules/: is_digit.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: leaderboard.rs  main.rs
