[package]
name = "mwt-bot"
version = "0.1.0"
edition = "2021"
authors = ["guy-732"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mwbot = "0.5.3"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }


[features]
read-only-wiki = []
